...
#endif
                                .accessibilityLabel("tile")
                                .accessibilityIdentifier("GameImage")
                                .accessibilityValue(symbolName)
                        }
                        .disabled(isInitiallyShowingBoard)
                        .accessibilityIdentifier("GameButton")
                        .accessibilityValue(symbolName)
#if os(watchOS)
                        .buttonStyle(.plain)
                        .foregroundStyle(.white)
#endif
                    }
...
#endif
            }
#if os(iOS)
            Spacer()
            
            Text("Tap counter: \(board.tapCount) ")
                .accessibilityIdentifier("tapCounter")
                .accessibilityValue("\(board.tapCount)")
            
            Text("Treasures found: \(board.treasureCount)")
                .accessibilityIdentifier("treasureCounter")
                .accessibilityValue("\(board.treasureCount)")
            
            Text("Unreveal treasures: \(board.unrevealedTreasureCount())")
                .accessibilityIdentifier("unreavealTreasureCounter")
                .accessibilityValue("\(board.unrevealedTreasureCount())")
#endif
#if os(watchOS)
            Text("Picks: \(board.treasureCount) Left: \(board.unrevealedTreasureCount())")
                .font(.system(size: 16, weight: .light, design: .serif))
                .italic()
...
