...
    var body: some View {
#if os(iOS)
        VStack(spacing: 20) {
            ImagePickerView(index: $index, images: images)
            Stepper(value: $step, in: 5...10) {
                Text("\(step) Rows/Cols")
                    .accessibilityIdentifier("SettingsRowsColsText")
                    .accessibilityValue(String(step))
            }
            .accessibilityIdentifier("SettingsStepper")
            
            Toggle("Bonus mode", isOn: $bonus)
                .accessibilityIdentifier("SettingsBonusToggle")
        }
        .padding(25)
#endif
#if os(watchOS)
        VStack() {
            ImagePickerView(index: $index, images: images)
...
