...
        //                    }
        //                    .toolbar {
        //                        ToolbarItem(placement: .navigationBarTrailing) {
        //                            Button {
        //                                showingSettings.toggle()
        //                            } label: {
        //                                Image(systemName: showingSettings ? "house" : "gear")
        //                                    .font(.title2)
        //                            }
        //                        }
        //                    }
        //                }
        
...
